@@ -19,6 +19,10 @@ the Free Software Foundation, Inc., 59 Temple Place - Suite 330, Boston,
 MA 02111-1307, USA.
 
 
+2002-03-13  Torbjorn Granlund  <tege@swox.com>
+
+	* mpn/sparc32/gmp-mparam.h: New file.
+
 2002-03-13  Kevin Ryde  <kevin@swox.se>
 
 	* demos/expr/exprfr.c: More mpfr functions, corrections to agm, cos,
